Stream API 1 version commit